start of drop down

--- a/package.json
+++ b/package.json
@@ -5,6 +5,19 @@
   "main": "./electron/main.js",
   "homepage": "./",
   "dependencies": {
+    "@progress/kendo-data-query": "^1.5.5",
+    "@progress/kendo-drawing": "^1.15.0",
+    "@progress/kendo-licensing": "^1.2.1",
+    "@progress/kendo-react-animation": "^4.9.0",
+    "@progress/kendo-react-buttons": "^4.9.0",
+    "@progress/kendo-react-common": "^4.9.0",
+    "@progress/kendo-react-data-tools": "^4.9.0",
+    "@progress/kendo-react-dateinputs": "^4.9.0",
+    "@progress/kendo-react-dropdowns": "^4.9.0",
+    "@progress/kendo-react-inputs": "^4.9.0",
+    "@progress/kendo-react-intl": "^4.9.0",
+    "@progress/kendo-react-treeview": "^4.9.0",
+    "@progress/kendo-theme-default": "^4.42.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
