--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^6.3.0",
     "electron-builder": "^22.13.1",
     "electron-is-dev": "^2.0.0",
+    "multiselect-react-dropdown": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
