graphs generated, need to work on dimensioning

--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@visx/group": "^2.1.0",
+    "@visx/marker": "^2.1.2",
+    "@visx/mock-data": "^2.1.2",
+    "@visx/scale": "^2.1.2",
+    "@visx/shape": "^2.1.2",
+    "@visx/visx": "^2.2.1",
     "concurrently": "^6.3.0",
     "electron-builder": "^22.13.1",
     "electron-is-dev": "^2.0.0",
