--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
     "styled-components": "^5.3.1",
     "wait-on": "^6.0.0",
     "web-vitals": "^1.1.2"
