--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron-is-dev": "^2.0.0",
     "multiselect-react-dropdown": "^2.0.7",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
