--- a/package.json
+++ b/package.json
@@ -5,15 +5,36 @@
   "main": "./electron/main.js",
   "homepage": "./",
   "dependencies": {
+    "@progress/kendo-data-query": "^1.5.5",
+    "@progress/kendo-drawing": "^1.15.0",
+    "@progress/kendo-licensing": "^1.2.1",
+    "@progress/kendo-react-animation": "^4.9.0",
+    "@progress/kendo-react-buttons": "^4.9.0",
+    "@progress/kendo-react-common": "^4.9.0",
+    "@progress/kendo-react-data-tools": "^4.9.0",
+    "@progress/kendo-react-dateinputs": "^4.9.0",
+    "@progress/kendo-react-dropdowns": "^4.9.0",
+    "@progress/kendo-react-inputs": "^4.9.0",
+    "@progress/kendo-react-intl": "^4.9.0",
+    "@progress/kendo-react-treeview": "^4.9.0",
+    "@progress/kendo-theme-default": "^4.42.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@visx/group": "^2.1.0",
+    "@visx/marker": "^2.1.2",
+    "@visx/mock-data": "^2.1.2",
+    "@visx/scale": "^2.1.2",
+    "@visx/shape": "^2.1.2",
+    "@visx/visx": "^2.2.2",
     "concurrently": "^6.3.0",
     "electron-builder": "^22.13.1",
     "electron-is-dev": "^2.0.0",
+    "multiselect-react-dropdown": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
     "styled-components": "^5.3.1",
     "wait-on": "^6.0.0",
     "web-vitals": "^1.1.2"
