--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "./electron/main.js",
-  "homepage": "./",
+  "homepage": "https://nu-formula-racing.github.io/NFR21-Telemetry/",
   "dependencies": {
     "@progress/kendo-data-query": "^1.5.5",
     "@progress/kendo-drawing": "^1.15.0",
@@ -47,7 +47,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "ebuild": "npm run build && node_modules/.bin/build",
-    "dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && electron .\""
+    "dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -68,6 +70,7 @@
     ]
   },
   "devDependencies": {
-    "electron": "^15.2.0"
+    "electron": "^15.2.0",
+    "gh-pages": "^3.2.3"
   }
 }
