--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "./electron/main.js",
-  "homepage": "./",
+  "homepage": "http://nu-formula-racing.github.io/NFR21-Telemetry",
   "dependencies": {
     "@progress/kendo-data-query": "^1.5.5",
     "@progress/kendo-drawing": "^1.15.0",
@@ -32,9 +32,9 @@
     "electron-is-dev": "^2.0.0",
     "multiselect-react-dropdown": "^2.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-dnd": "^9.4.0",
     "react-dnd-html5-backend": "^9.4.0",
+    "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
     "styled-components": "^5.3.1",
@@ -47,7 +47,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "ebuild": "npm run build && node_modules/.bin/build",
-    "dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && electron .\""
+    "dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -68,6 +70,7 @@
     ]
   },
   "devDependencies": {
-    "electron": "^15.2.0"
+    "electron": "^15.2.0",
+    "gh-pages": "^3.2.3"
   }
 }
