--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-select": "^5.1.0",
     "styled-components": "^5.3.1",
     "wait-on": "^6.0.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
