failed attempt at websocket

--- a/package.json
+++ b/package.json
@@ -21,22 +21,28 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@visx/axis": "^2.10.0",
+    "@visx/grid": "^2.10.0",
     "@visx/group": "^2.1.0",
     "@visx/marker": "^2.1.2",
     "@visx/mock-data": "^2.1.2",
     "@visx/scale": "^2.1.2",
     "@visx/shape": "^2.1.2",
-    "@visx/visx": "^2.2.2",
+    "@visx/tooltip": "^2.10.0",
+    "@visx/visx": "^2.10.0",
     "concurrently": "^6.3.0",
     "electron-builder": "^22.13.1",
     "electron-is-dev": "^2.0.0",
     "multiselect-react-dropdown": "^2.0.7",
+    "net": "^1.0.2",
     "react": "^17.0.2",
     "react-dnd": "^9.4.0",
     "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.1",
     "wait-on": "^6.0.0",
     "web-vitals": "^1.1.2",
